--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -147,11 +147,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conditional Statements"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#program1\n",
+    "#Get one string from user\n",
+    "#extract middle letter of the string\n",
+    "#check whether middle letter is vowel or no\n",
+    "\n",
+    "#program2\n",
+    "#Get one string from user\n",
+    "#Find the middle letter\n",
+    "#find ascii value for the middle letter\n",
+    "#check whether ascii value is odd or even\n",
+    "\n",
+    "#program3:\n",
+    "#get one string from user\n",
+    "#check whether length of the string is odd or even\n",
+    "\n",
+    "#program4:\n",
+    "#Get one string from user\n",
+    "#check whether string is palindrome or no"
+   ]
   }
  ],
  "metadata": {
