--- a/Conditional statements.ipynb
+++ b/Conditional statements.ipynb
@@ -32,7 +32,7 @@
     }
    ],
    "source": [
-    "#assginment operator\n",
+    "#assignment operator\n",
     "a = 7\n",
     "\n",
     "#comparision operators\n",
@@ -317,6 +317,157 @@
     "    print(\"even number\")\n",
     "    \n",
     "print(\"EOP\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "main\n"
+     ]
+    }
+   ],
+   "source": [
+    "#elif\n",
+    "#if elif elif ....\n",
+    "\n",
+    "a = 9\n",
+    "\n",
+    "if a > 9:\n",
+    "    print(\"greater than nine\")\n",
+    "elif a < 9:\n",
+    "    print(\"less than nine\")\n",
+    "elif a == 10:\n",
+    "    print(\"equal to nine\")\n",
+    "print(\"main\")\n",
+    "    \n",
+    "#elif can n times\n",
+    "#if else ===> one time\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "greater than nine\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 8\n",
+    "\n",
+    "if a > 5:\n",
+    "    print(\"greater than nine\")\n",
+    "elif a < 9:\n",
+    "    print(\"less than nine\")\n",
+    "elif a == 8:\n",
+    "    print(\"equal to nine\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOTA\n",
+      "main\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 8\n",
+    "\n",
+    "if a < 5:\n",
+    "    print(\"greater than nine\")\n",
+    "elif a < 7:\n",
+    "    print(\"less than nine\")\n",
+    "elif a == 18:\n",
+    "    print(\"equal to nine\")\n",
+    "else:\n",
+    "    print(\"NOTA\")\n",
+    "print(\"main\")\n",
+    "\n",
+    "#else ===> without any boolean condition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#if\n",
+    "#if else\n",
+    "#if elif elif elif\n",
+    "#if elif elif elif else"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## in keyword"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "substring is available\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"python\"\n",
+    "\n",
+    "if \"py\" in a:\n",
+    "    print(\"substring is available\")\n",
+    "else:\n",
+    "    print(\"substring is not available\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "substring is available\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = [\"a\", \"aa\", \"aaaa\"]\n",
+    "\n",
+    "dict1 = {1:\"a\", 2:\"aa\", 3:\"aaa\"}\n",
+    "\n",
+    "if \"a\" in b:\n",
+    "    print(\"substring is available\")\n",
+    "else:\n",
+    "    print(\"substring is not available\")"
    ]
   },
   {
