--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -176,7 +176,65 @@
     "\n",
     "#program4:\n",
     "#Get one string from user\n",
-    "#check whether string is palindrome or no"
+    "#check whether string is palindrome or no\n",
+    "\n",
+    "#program5:\n",
+    "#Get one mark from student\n",
+    "#mark 0 to 100 otherwise invalid mark\n",
+    "\n",
+    "#50 + PASS otherwise FAIL\n",
+    "#90 to 100 ===> A  ==> Even + Odd -\n",
+    "#80 to 89 ===> B\n",
+    "#70 to 79 ===> C\n",
+    "#60 to 69 ===> D\n",
+    "#50 to 59 ===> E\n",
+    "\n",
+    "#0 to 49 ===> FAIL\n",
+    "\n",
+    "\n",
+    "#93 ===> A-\n",
+    "#99 ===> A-\n",
+    "#88 ====> B+\n",
+    "\n",
+    "#78\n",
+    "\n",
+    "#VALID MARK\n",
+    "#PASS MARK\n",
+    "#B+\n",
+    "\n",
+    "#program6\n",
+    "\n",
+    "#hackerrank Write a function\n",
+    "\n",
+    "#program7\n",
+    "#hackerrank Python If-Else\n",
+    "\n",
+    "#program8 \n",
+    "\n",
+    "#two strings from user\n",
+    "#string 1: python  ==> first + middle + last \n",
+    "#string 2: ptn\n",
+    "\n",
+    "#valid otherwise invalid\n",
+    "\n",
+    "#program9:\n",
+    "\n",
+    "#two strings from user\n",
+    "\n",
+    "#mathematics ===> 4 vowels\n",
+    "#science ==> 3 vowels\n",
+    "\n",
+    "#both are equal count or not equal\n",
+    "\n",
+    "#program10\n",
+    "\n",
+    "#get one integer from user\n",
+    "#armstrong or no (without using loops)\n",
+    "\n",
+    "#153 ===> 1^3 + 5^3 + 3^3\n",
+    "#370 ===> 3^3 + 7^3 + 0^3\n",
+    "#371 ====> 3^3 + 7^3 + 1^3\n",
+    "\n"
    ]
   }
  ],
